Introduce Symfony Forms

--- a/templates/content/_fields.html.twig
+++ b/templates/content/_fields.html.twig
@@ -13,7 +13,17 @@
                 '@bolt/_partials/fields/' ~ fielddefinition.type ~ '.html.twig',
                 '@bolt/_partials/fields/generic.html.twig'
                 ] with { 'field' : field } %}
-
         {% endfor %}
     </div>
 {% endfor %}
+
+{#
+{% for group in form.groups if group != 'Relations' %}
+    <div class="tab-pane {% if loop.first %}show active{% endif %}" id="{{ group.slug }}" role="tabpanel"
+         aria-labelledby="{{ group.slug }}-tab">
+        {% for field in group.fields %}
+            {{ form_row(field) }}
+        {% endfor %}
+    </div>
+{% endfor %}
+#}
