--- a/public/theme/skeleton/partials/_recordfooter.twig
+++ b/public/theme/skeleton/partials/_recordfooter.twig
@@ -34,16 +34,16 @@
         </p>
     {% endif %}
 
-    {% set related_cts = record|related_all %}
-    {% if related_cts is not empty %}
+    {% set related_content_types = record|related_all %}
+    {% if related_content_types is not empty %}
         <p class="meta">{{ __('general.phrase.related-content') }}
         <ul>
-            {% for ct, related_records in related_cts %}
+            {% for content_type, related_records in related_content_types %}
                 <li>
-                    <h4>Related {{ app.config.contenttypes[ct].name }}</h4>
+                    <h4>Related {{ app.config.contenttypes[content_type].name }}</h4>
                     <ul>
                         {% for related_record in related_records %}
-                            <li><a href="{{ related|link }}">{{ related|title }}</a></li>
+                            <li><a href="{{ related_record|link }}">{{ related_record|title }}</a></li>
                         {% endfor %}
                     </ul>
                 </li>
