--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -23,10 +23,10 @@
 {% block field %}
     {#<pre><code>{{ value|json_encode() }}</code></pre>#}
     <editor-select
-        :value="{{ value|json_encode() }}"
+        :value="{{ value|json_encode()|e }}"
         :name="'{{ name }}'"
         :id="'{{ id }}'"
-        :options="{{ options|json_encode() }}"
+        :options="{{ options|json_encode()|e }}"
         :form="'{{ form }}'"
         :multiple="{{ multiple }}"
         :allowempty="{{ allowempty }}"
