--- a/templates/_partials/_content_listing.html.twig
+++ b/templates/_partials/_content_listing.html.twig
@@ -3,7 +3,7 @@
     <listing-records
       type="{{ type }}"
       {# tricky part: https://github.com/whiteoctober/WhiteOctoberPagerfantaBundle/issues/165#issuecomment-462777227 #}
-      :data="{{ records|merge([])|json_encode|e }}"
+      :data="{{ records|merge([])|json_encode }}"
     >
     </listing-records>
     <!-- end listing records -->
