Well, that took the better part of my weekend.

--- a/templates/_partials/fields/text.html.twig
+++ b/templates/_partials/fields/text.html.twig
@@ -8,7 +8,7 @@
 {% block field %}
     <editor-text
         :id="'{{ id }}'"
-        :value="{{ value|json_encode()|e }}"
+        :value="{{ value|json_encode() }}"
         :name="'{{ name }}'"
         :type="'{{ class }}'"
         :disabled="'{{ disabled }}'"
