--- a/templates/_partials/fields/markdown.html.twig
+++ b/templates/_partials/fields/markdown.html.twig
@@ -2,7 +2,7 @@
 
 {% block field %}
     <editor-markdown
-        :value='{{ value|json_encode()|e }}'
+        :value='{{ value|json_encode() }}'
         :name="'{{ name }}'"
     ></editor-markdown>
 {% endblock %}
