--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -4,6 +4,6 @@
         <field-password
             :id="'{{ id }}'"
             :name="'{{ name }}'"
-            :value="{{ value|json_encode()|e }}"
+            :value="{{ value|json_encode() }}"
         ></field-password>
 {% endblock %}
