Working on suggestions from review

--- a/templates/_partials/fields/html.html.twig
+++ b/templates/_partials/fields/html.html.twig
@@ -2,7 +2,7 @@
 
 {% block field %}
     <editor-html
-        :value="{{ value|json_encode() }}"
+        :value="{{ value|json_encode }}"
         :name="'{{ name }}'"
     ></editor-html>
 {% endblock %}
