--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -21,12 +21,12 @@
 {% endif %}
 
 {% block field %}
-    {#<pre><code>{{ value|json_encode() }}</code></pre>#}
+    {#<pre><code>{{ value|json_encode }}</code></pre>#}
     <editor-select
-        :value="{{ value|json_encode() }}"
+        :value="{{ value|json_encode }}"
         :name="'{{ name }}'"
         :id="'{{ id }}'"
-        :options="{{ options|json_encode() }}"
+        :options="{{ options|json_encode }}"
         :form="'{{ form }}'"
         :multiple="{{ multiple }}"
         :allowempty="{{ allowempty }}"
