--- a/templates/content/_taxonomies.html.twig
+++ b/templates/content/_taxonomies.html.twig
@@ -13,16 +13,16 @@
                 </label>
                 <div>
                     <editor-select
-                            :value="{{ value|json_encode() }}"
+                            :value="{{ value|json_encode }}"
                             :name="'taxonomy[{{ definition.slug }}]'"
                             :id="'taxonomy-{{ definition.slug }}'"
-                            :options="{{ options|json_encode() }}"
+                            :options="{{ options|json_encode }}"
                             :multiple="{{ definition.multiple ? 'true' : 'false' }}"
                             :taggable="{{ (definition.behaves_like == 'tags') ? 'true' : 'false' }}"
                             :allowempty={{ definition.allow_empty ? 'true' : 'false' }}
                     ></editor-select>
 
-                    {# (Current saved value: <code>{{ value|json_encode() }}</code> ) #}
+                    {# (Current saved value: <code>{{ value|json_encode }}</code> ) #}
                 </div>
 
             </div>
