--- a/public/theme/skeleton/test.twig
+++ b/public/theme/skeleton/test.twig
@@ -25,30 +25,42 @@
 
     <p>
         Default output with <code>allow_markup: {{ record.field('text_markup').definition.allow_markup ? 'true' : 'false' }}</code>:<br>
-        <span class="box text_markup_a">{{ record.text_markup }}</span><br>
+        <div class="box text_markup_a">{{ record.text_markup }}</div><br>
 
         Explicit raw: <br>
-        <span class="box text_markup_b">{{ record.text_markup|raw }}</span><br>
+        <div class="box text_markup_b">{{ record.text_markup|raw }}</div><br>
 
         Escaped: <br>
-        <span class="box text_markup_c">{{ record.text_markup|e }}</span><br>
+        <div class="box text_markup_c">{{ record.text_markup|e }}</div><br>
 
-        {{ dump(record.field('text_plain').getValue())}}
     </p>
 
     <hr>
 
     <p>
         Default output with <code>allow_markup: {{ record.field('text_plain').definition.allow_markup ? 'true' : 'false' }}</code>:<br>
-        <span class="box text_plain_a">{{ record.text_plain }}</span><br>
+        <div class="box text_plain_a">{{ record.text_plain }}</div><br>
 
         Explicit raw: <br>
-        <span class="box text_plain_b">{{ record.text_plain|raw }}</span><br>
+        <div class="box text_plain_b">{{ record.text_plain|raw }}</div><br>
 
         Escaped: <br>
-        <span class="box text_plain_c">{{ record.text_plain|e }}</span><br>
+        <div class="box text_plain_c">{{ record.text_plain|e }}</div><br>
+    </p>
 
-        {{ dump(record.field('text_plain').getValue())}}
+    <p>
+        Default output for <code>type: html</code>:<br>
+        <div class="box text_html">{{ record.html_field }}</div><br>
+    </p>
+
+    <p>
+        Default output for <code>type: markdown</code>:<br>
+        <div class="box text_markdown">{{ record.markdown_field }}</div><br>
+    </p>
+
+    <p>
+        Default output for <code>type: html</code>:<br>
+        <div class="box text_textarea">{{ record.textarea_field }}</div><br>
     </p>
 
     {% if record.hasField('image') %}
