--- a/public/theme/skeleton/listing.twig
+++ b/public/theme/skeleton/listing.twig
@@ -59,6 +59,70 @@
             </article>
         {% endfor %}
 
+    <style>
+        .pagerfanta {
+        }
+
+        .pagerfanta a,
+        .pagerfanta span {
+            display: inline-block;
+            border: 1px solid blue;
+            color: blue;
+            margin-right: .2em;
+            padding: .25em .35em;
+        }
+
+        .pagerfanta a {
+            text-decoration: none;
+        }
+
+        .pagerfanta a:hover {
+            background: #ccf;
+        }
+
+        .pagerfanta .dots {
+            border-width: 0;
+        }
+
+        .pagerfanta .current {
+            background: #ccf;
+            font-weight: bold;
+        }
+
+        .pagerfanta .disabled {
+            border-color: #ccf;
+            color: #ccf;
+        }
+
+        COLORS:
+
+        .pagerfanta a,
+        .pagerfanta span {
+            border-color: blue;
+            color: blue;
+        }
+
+        .pagerfanta a:hover {
+            background: #ccf;
+        }
+
+        .pagerfanta .current {
+            background: #ccf;
+        }
+
+        .pagerfanta .disabled {
+            border-color: #ccf;
+            color: #cf;
+        }
+    </style>
+
+    {% if records.haveToPaginate|default() %}
+        <div class="pagination">
+            {{ pagerfanta(records) }}
+        </div>
+    {% endif %}
+
+
         {# If there are more records than will fit on one page, the pager is shown. #}
         {{ pager(template = 'partials/_sub_pager.twig') }}
 
