--- a/public/theme/skeleton/partials/_master.twig
+++ b/public/theme/skeleton/partials/_master.twig
@@ -7,9 +7,9 @@
         {# make sure we always display a proper title: The record's title if there is one, appended with the
            sitename. If there is no title, we append the sitename with the payoff, if there is one. #}
         <title>
-            {%- if record.title|default %}{{ record.title|striptags }} | {% endif -%}
+            {%- if record|default and record.title %}{{ record.title|striptags }} | {% endif -%}
                 {{ config.get('general/sitename') -}}
-            {% if not record.title|default and config.has('general/payoff') %} | {{ config.get('general/payoff') }}{% endif -%}
+            {% if not record|default and config.has('general/payoff') %} | {{ config.get('general/payoff') }}{% endif -%}
         </title>
         {#<link rel="stylesheet" href="{{ asset('css/normalize.css', 'theme') }}">#}
         {#<link rel="stylesheet" href="{{ asset('css/sakura.css', 'theme') }}">#}
