--- a/public/theme/skeleton/test.twig
+++ b/public/theme/skeleton/test.twig
@@ -71,7 +71,7 @@
         <hr>
     {% endif %}
 
-    {% if record.image %}
+    {% if record.picture %}
         We have a field named `picture`: {{ dump(record.picture) }}
         <img src="{{ thumbnail(record.picture, 400, 260) }}">
         <hr>
