--- a/public/theme/skeleton/partials/_sub_taxonomylinks.twig
+++ b/public/theme/skeleton/partials/_sub_taxonomylinks.twig
@@ -1,18 +1,15 @@
-{# @todo See Github Issue https://github.com/bolt/four/issues/255 #}
-{#
-{% for type, values in record|taxonomy %}
+{% for type, taxonomies in record|taxonomies %}
     <em>
-        {% if values|length < 2 %}
-            {{ config.get('taxonomy')[type].singular_name }}:
+        {% if taxonomies|length < 2 %}
+            {{ config.get('taxonomies')[type].singular_name }}:
         {% else %}
-            {{ config.get('taxonomy')[type].name }}:
+            {{ config.get('taxonomies')[type].name }}:
         {% endif %}
     </em>
-    {% for link, value in values %}
-        <a href="{{ link }}">{{ value }}</a>{% if not loop.last %}, {% endif %}
+    {% for taxonomy in taxonomies %}
+        <a href="{{ taxonomy.link }}">{{ taxonomy.name }}</a>{% if not loop.last %}, {% endif %}
     {% else %}
         {{ __('general.phrase.none') }}
     {% endfor %}
     {% if not loop.last %} - {% endif %}
 {% endfor %}
-#}
