Some SCSS tweaks

--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -2,4 +2,10 @@
 
 $card-box-shadow: 0 7.5px 15px -5px rgba(0, 0, 0, 0.07);
 
-$letter-spacing: 1px;
+$letter-spacing: 0px;
+
+$bolt-blue: #255687; // Nice and bright, pretty light
+$bolt-bluegray: #2F3E4D; // Nice dark and desaturated
+$bolt-saturated: #003E7C; // Very saturated. Use with care
+
+
