--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -6,14 +6,14 @@
 {% if record.id %}
     &nbsp;
 
-    <button type="submit" class="btn btn-secondary mb-3" form="editcontent"
+    <button type="submit" class="btn btn-primary mb-3" form="editcontent"
             formaction="{{ path('bolt_content_edit_preview', {'id': record.id }) }}" formtarget="_blank">
         <i class="fas fa-external-link-square-alt mr-2"></i>
         {{ 'action.preview'|trans }}
     </button>
 
     {% if record.status == "published" %}
-    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split mb-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split mb-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
     </button>
     <button type="submit" class="btn btn-light dropdown-menu dropdown-menu-right" form="editcontent"
