--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -88,6 +88,8 @@
     .link--menu {
       background: var(--admin-sidebar-menu);
       border-radius: 0 $border-radius $border-radius 0;
+      box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+      border: 1px solid rgba(0, 0, 0, 0.1);
       position: absolute;
       left: 100%;
       top: 0;
@@ -156,7 +158,7 @@
   &--footer {
     -webkit-backface-visibility: hidden;
 
-    @include darken(--admin-sidebar, 0.02);
+    background: transparent;
 
     color: var(--admin-sidebar-text);
     position: fixed;
