--- a/assets/scss/modules/admin/_toolbar.scss
+++ b/assets/scss/modules/admin/_toolbar.scss
@@ -8,6 +8,7 @@
     width: 100%;
     display: flex;
     font-size: 90%;
+    padding: 0 1rem 0 0;
 
     &.is-dark {
       color: var(--admin-toolbar-text-light);
@@ -40,7 +41,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 $spacer / 2;
+    padding: 0 $spacer;
     opacity: 0.75;
 
     i {
