--- a/public/theme/skeleton/partials/_footer.twig
+++ b/public/theme/skeleton/partials/_footer.twig
@@ -10,7 +10,7 @@
     <h4>{{ __('Search') }}</h4>
 
     <form method="get" action="{{ path('search') }}" id="searchform-inline" enctype="text/plain">
-        <input type="search" value="{{ search|default() }}" placeholder="{{ __('general.phrase.search-ellipsis') }}" name="search" >
+        <input type="search" value="{{ searchTerm|default() }}" placeholder="{{ __('general.phrase.search-ellipsis') }}" name="searchTerm" >
         <button type="submit">{{ __('general.phrase.search') }}</button>
     </form>
 
