--- a/public/theme/skeleton/search.twig
+++ b/public/theme/skeleton/search.twig
@@ -22,7 +22,7 @@
             {{ block.content }}
         {% endif %}
 
-        <form method="get" action="{{ path('search') }}" id="searchform-inline" enctype="text/plain">
+        <form method="get" action="{{ path('search') }}" id="searchform-main" enctype="text/plain">
             <input type="search" value="{{ searchTerm|default() }}" placeholder="{{ __('general.phrase.search-ellipsis') }}" name="searchTerm" >
             <button type="submit">{{ __('general.phrase.search') }}</button>
         </form>
