--- a/public/theme/skeleton/partials/_footer.twig
+++ b/public/theme/skeleton/partials/_footer.twig
@@ -17,7 +17,7 @@
     <hr>
 
     <p>
-        {{ __("This website is <a href='%url%' target='_blank' title='Sophisticated, lightweight & simple CMS'>Built with Bolt</a>.",{'%url%':'http://bolt.cm'}) }}
+        {{ __('general.phrase.built-with-bolt') }}
     </p>
 
     {{ widgets('footer') }}
