--- a/templates/content/_fields.html.twig
+++ b/templates/content/_fields.html.twig
@@ -1,4 +1,5 @@
 {% for group in groups if group != 'Relations' %}
+
     <div class="tab-pane {% if loop.first %}show active{% endif %}" id="{{ group|slug }}" role="tabpanel"
          aria-labelledby="{{ group|slug }}-tab">
         {% for key, fielddefinition in record.definition.fields if fielddefinition.group == group %}
@@ -6,7 +7,7 @@
             {% if record.hasField(key) %}
                 {% set field = record.getField(key)|translated(currentlocale) %}
             {% else %}
-                {% set field = field_factory(key, fielddefinition) %}
+                {% set field = record|field_factory(key, fielddefinition) %}
             {%  endif %}
 
             {% include [
