--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -28,7 +28,7 @@
         {% set labels = jsonlabels(['about.bolt_documentation', 'action.visit_site', 'action.create_new', ['general.greeting', {'%name%': user_display_name}], 'action.logout', 'action.edit_profile']) %}
         <admin-toolbar
             site-name="{% if config is defined %}{{ config.get('general/sitename') }}{% endif %}"
-            :menu="{{ sidebarmenu() }}"
+            :menu="{{ sidebar_menu() }}"
             user="{{ user|default }}"
             :labels="{{ labels }}"
         ></admin-toolbar>
@@ -49,7 +49,7 @@
     <div class="admin__sidebar">
         <div id="sidebar">
             <admin-sidebar
-              :menu="{{ sidebarmenu() }}"
+              :menu="{{ sidebar_menu() }}"
               :version="'{{ version|default('unknown')|replace({'alpha': 'α', 'beta': 'β'}) }}'"
               :about-link="{{ path('bolt_about')|json_encode }}"
             ></admin-sidebar >
