Eliminate blank spaces in "New" menu

--- a/assets/scss/modules/admin/_toolbar.scss
+++ b/assets/scss/modules/admin/_toolbar.scss
@@ -59,7 +59,7 @@
       }
     }
 
-    &.is-site,
+    &.is-new,
     &.is-profile {
       .toolbar--menu {
         left: auto;
@@ -67,7 +67,7 @@
       }
     }
 
-    &.is-site {
+    &.is-new {
       margin-left: auto;
     }
 
