Replace `jsonlabels` with an array in Twig

--- a/templates/_partials/_flash_messages.html.twig
+++ b/templates/_partials/_flash_messages.html.twig
@@ -1,4 +1,5 @@
-{%  set labels = jsonlabels(['action.close_alert']) %}
+{%  set labels = {'action.close_alert': 'action.close_alert'|trans } %}
+
 
 {% for type, messages in app.flashes %}
     {% for message in messages %}
