--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -25,7 +25,17 @@
     <!-- Admin Toolbar -->
     <nav id="toolbar" class="admin__toolbar">
         {% set user_display_name = user.displayName|default('Unknown user') %}
-        {% set labels = jsonlabels(['about.bolt_documentation', 'action.visit_site', 'action.create_new', ['general.greeting', {'%name%': user_display_name}], 'action.logout', 'action.edit_profile']) %}
+
+        {# Setting the labels and their localisations that are used in the sidebar-menu. #}
+        {% set labels = {
+            'about.bolt_documentation': 'about.bolt_documentation'|trans,
+            'action.visit_site': 'action.visit_site'|trans,
+            'action.create_new': 'action.create_new'|trans,
+            'general.greeting': 'general.greeting'|trans({'%name%': user_display_name}),
+            'action.logout': 'action.logout'|trans,
+            'action.edit_profile': 'action.edit_profile'|trans
+        }|json_encode %}
+
         <admin-toolbar
             site-name="{% if config is defined %}{{ config.get('general/sitename') }}{% endif %}"
             :menu="{{ sidebar_menu() }}"
