--- a/public/theme/skeleton/partials/_master.twig
+++ b/public/theme/skeleton/partials/_master.twig
@@ -29,7 +29,7 @@
 
             {{ widgets('main_bottom') }}
 
-{#            {{ include('partials/_aside.twig') }}#}
+            {{ include('partials/_aside.twig') }}
 
         {% endblock body %}
 
