Add e2e test for menu

--- a/public/theme/skeleton/partials/_sub_menu.twig
+++ b/public/theme/skeleton/partials/_sub_menu.twig
@@ -24,7 +24,7 @@
             {{- item.label -}}
         </a>
 
-        {% if item.submenu is defined and withsubmenus %}
+        {% if item.submenu and withsubmenus %}
             <ul class="menu submenu vertical">
                 {% for submenu in item.submenu %}
                     {{ display_menu_item(submenu, loop) }}
