Initial work on Snippets / Widgets

--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -16,6 +16,9 @@
 {% endblock %}
 
 {% block aside %}
+
+    {{ snippet('weather') }}
+
     {% include '@bolt/_partials/_widget_weather.html.twig' %}
 {% endblock %}
 
