Working on Snippets / Widgets

--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -17,8 +17,7 @@
 
 {% block aside %}
 
-    {{ snippet('weather') }}
+    {{ widget('Weather Widget') }}
 
-    {% include '@bolt/_partials/_widget_weather.html.twig' %}
 {% endblock %}
 
