Getting more work done on Widgets

--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -17,8 +17,7 @@
 
 {% block aside %}
 
-    {{ widget('News Widget') }}
-    {{ widget('Weather Widget') }}
+    {{ widgets('dashboard_aside_top') }}
 
 {% endblock %}
 
