Fix bunch of bugs related to Symfony Forms implementation

--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -3,15 +3,14 @@
 <div class="btn-group">
 {{ macro.button('action.save', 'fa-save', 'success', 'submit', 'editcontent') }}
 
+&nbsp;
+
+<button type="submit" class="btn btn-primary mb-3" form="editcontent"
+        formaction="{{ path('bolt_content_edit_preview', {'contentType': record.contentType }) }}" formtarget="_blank">
+    <i class="fas fa-external-link-square-alt mr-2"></i>
+    {{ 'action.preview'|trans }}
+</button>
 {% if record.id %}
-    &nbsp;
-
-    <button type="submit" class="btn btn-primary mb-3" form="editcontent"
-            formaction="{{ path('bolt_content_edit_preview', {'id': record.id }) }}" formtarget="_blank">
-        <i class="fas fa-external-link-square-alt mr-2"></i>
-        {{ 'action.preview'|trans }}
-    </button>
-
     {% if record.status == "published" %}
     <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split mb-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
