Small refactor of Content Form

--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -6,7 +6,7 @@
 &nbsp;
 
 <button type="submit" class="btn btn-primary mb-3" form="editcontent"
-        formaction="{{ path('bolt_content_edit_preview', {'contentType': record.contentType }) }}" formtarget="_blank">
+        formaction="{{ path('bolt_content_preview', {'contentType': record.contentType }) }}" formtarget="_blank">
     <i class="fas fa-external-link-square-alt mr-2"></i>
     {{ 'action.preview'|trans }}
 </button>
@@ -16,7 +16,7 @@
         <span class="sr-only">Toggle Dropdown</span>
     </button>
     <button type="submit" class="btn btn-light dropdown-menu dropdown-menu-right" form="editcontent"
-            formaction="{{ path('bolt_content_edit_viewsave', {'id': record.id }) }}" formtarget="_blank" style="white-space: nowrap; padding-right: 1rem;">
+            formaction="{{ path('bolt_content_viewsaved', {'id': record.id }) }}" formtarget="_blank" style="white-space: nowrap; padding-right: 1rem;">
         <i class="fas fa-external-link-square-alt mr-2 ml-2"></i>
         {{ 'action.view_saved'|trans }}
     </button>
