--- a/templates/finder/finder.html.twig
+++ b/templates/finder/finder.html.twig
@@ -6,7 +6,7 @@
 
 {% block main %}
 
-    <h2>{{ 'caption.path'|trans }}: {{ area }}{{ path }}</h2>
+    <h2>{{ 'caption.path'|trans }}: {{ location }}{{ path }}</h2>
 
     {% include '@bolt/finder/_quickselect.html.twig' %}
 
