--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -2,7 +2,7 @@
 
 {% block field %}
     {% set setPath = field.definition.get('upload')|default('') %}
-    {% set directory = path('bolt_async_upload', {'area': area|default('files'), 'path': setPath}) %}
+    {% set directory = path('bolt_async_upload', {'location': location|default('files'), 'path': setPath}) %}
     <editor-image
         :name="'{{ name }}'"
         :filename="'{{ field.get('filename') }}'"
