--- a/public/theme/skeleton/partials/_fresh_install.twig
+++ b/public/theme/skeleton/partials/_fresh_install.twig
@@ -4,7 +4,7 @@
         <p>This is a minimal theme, with a modular structure. It is well suited to build your own theme's on top of.</p>
         <ul>
             <li>Check the <a href='https://github.com/bolt/themes/blob/master/readme.md'>readme.md</a> for instructions on how to customize this theme.</li>
-            <li><a href='{{ path('bolt_file_edit', {'area': 'themes', 'file': 'skeleton/index.twig'}) }}'>Edit this template</a>, to get rid of this 'callout'.</li>
+            <li><a href='{{ path('bolt_file_edit', {'location': 'themes', 'file': 'skeleton/index.twig'}) }}'>Edit this template</a>, to get rid of this 'callout'.</li>
         </ul>
         <small>Note: Only registered users will see this. This piece of content is hidden from regular visitors.</small>
     </div>
